--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
 
     <div class="container mx-auto p-4 sm:p-6 md:p-8 max-w-4xl">
         <header class="mb-8 flex justify-center items-center gap-4">
-            <img src="iamo_logo.png" alt="IAMO Logo" class="h-16 w-16 sm:h-20 sm:w-20">
+            <img src="IAMO_logo.png" alt="IAMO Logo" class="h-16 w-16 sm:h-20 sm:w-20">
             <div class="text-center">
                 <h1 class="text-3xl sm:text-4xl font-bold text-blue-600">IAMO</h1>
                 <p class="text-lg text-gray-600">Instrumento de Avaliação Multifatorial da Obesidade</p>
